# mouse-recorder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mouse-recorder.spec  pyproject.toml
.github/workflows/: build_windows_exe.yml  ci.yml
scripts/: build_exe.ps1  install_precommit.ps1  install_precommit.sh  run_record.py
src/mouse_recorder/: __init__.py  cli.py  recorder.py
tests/: test_cli.py  test_recorder.py
